# binday

./: .dockerignore  .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
binday/binx/: binx.py
binday/boards/: board.py  uno_r3.py
binday/server/factories/: application.py
binday/server/forms/: auth.py  main.py  my_bin.py
binday/server/models/: base.py  bin_day.py  bin_reading.py  my_bin.py  user.py  user_config.py
binday/server/models/migrations/versions/: 47688dd1ec92_.py  7a998316135c_.py  f5aa79f42d6c_.py
binday/server/static/css/: style.css
binday/server/templates/: base.html  index.html  user_config.html
binday/server/templates/auth/: login.html  register.html
binday/server/templates/my_bin/: create.html  edit.html  view.html
binday/server/views/: auth.py  main.py  my_bin.py
binday/utils/: bin_utils.py  common_utils.py  push_notif_utils.py  stat_utils.py
binday/workers/: celery.py  tasks.py
dockerfiles/: Dockerfile
scripts/: entrypoint.sh
